client: fstat should take CEPH_STAT_CAP_INODE_ALL

Fixes: http://tracker.ceph.com/issues/15723
Signed-off-by: Noah Watkins <nwatkins@redhat.com>
Signed-off-by: Yan, Zheng <zyan@redhat.com>
(cherry picked from commit 4b1a5d4ef9c3a116bb08100edd576819930047e3)